--- a/index.html
+++ b/index.html
@@ -42,18 +42,23 @@
         <img src="images/icon-arrow-down.svg" alt="icon-arrow">
       </div>
       <div class="dropdown-content-features">
-        <span><img src="images/icon-todo.svg" alt="icon-reminders">
-          <p>Todo List</p>
-        </span>
-        <span><img src="images/icon-calendar.svg" alt="icon-reminders">
-          <p> Calendar</p>
-        </span>
-        <span><img src="images/icon-reminders.svg" alt="icon-reminders">
-          <p>Reminders</p>
-        </span>
-        <span><img src="images/icon-planning.svg" alt="icon-reminders">
-          <p>Planning</p>
-        </span>
+        <ul>
+          <li>
+            <a href="#"><img src="images/icon-todo.svg" alt="icon-reminders">
+              <p>Todo List</p>
+            </a>
+          </li>
+          <li><a href="#"><img src="images/icon-calendar.svg" alt="icon-reminders">
+              <p> Calendar</p>
+            </a></li>
+          <li> <a href="#"><img src="images/icon-reminders.svg" alt="icon-reminders">
+              <p>Reminders</p>
+            </a></li>
+          <li><a href="#"><img src="images/icon-planning.svg" alt="icon-reminders">
+              <p>Planning</p>
+            </a> </li>
+        </ul>
+
       </div>
     </div>
 
@@ -63,9 +68,11 @@
         <img src="images/icon-arrow-down.svg" alt="icon-arrow">
       </div>
       <div class="dropdown-content-company">
-        <span>History</span>
-        <span>Our Team</span>
-        <span>Blog</span>
+        <ul>
+          <li><a href="#">History</a></li>
+          <li><a href="#">Our Team</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
       </div>
     </div>
 
