--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 </head>
 
 <body>
-
-  <img src="images/logo.svg" alt="logo" class="logo">
-  <button class="hamburger">
+  <header> <img src="images/logo.svg" alt="logo" class="logo">
+  <button class="hamburger"></header>
+ 
     <span class="ham__box">
       <span class="ham__inner">
       </span>
@@ -102,13 +102,14 @@
     <img src="images/image-hero-desktop.png" alt="image-hero-desktop" class="hero_desk">
     <img src="images/image-hero-mobile.png" alt="image-hero-mobile" class="hero_mobile">
   </main>
-
+<footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Przemek Bubak</a>.
   </div>
   <script src="script.js"></script>
   </div>
+</footer>
 </body>
 
 </html>
