--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
         </ul>
       </div>
     </div>
-
-    <p>Careers</p>
-    <p>About</p>
+    <a href="#">Careers</a>
+    <a href="#">About</a>
     <div class="signup">
       <div class="login">Login</div>
       <div class="register">Register</div>
