--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <a href="#">Careers</a>
     <a href="#">About</a>
     <div class="signup">
-      <div class="login">Login</div>
-      <div class="register">Register</div>
+      <a href="#" class="login">Login</a>
+      <a href="#" class="register">Register</a>
     </div>
   </nav>
   <div class="overlay"></div>
