update mobile view

--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
 
 <body>
   <header> <img src="images/logo.svg" alt="logo" class="logo">
-  <button class="hamburger"></header>
+  <button class="hamburger">
  
     <span class="ham__box">
       <span class="ham__inner">
       </span>
     </span>
   </button>
+</header>
   <nav>
 
     <div class="dropdown">
